@@ -7,6 +7,7 @@ cffi==1.15.1
 charset-normalizer==3.1.0
 click==8.1.3
 cryptography==40.0.1
+Deprecated==1.2.13
 dill==0.3.6
 exceptiongroup==1.1.1
 fastapi==0.95.0
@@ -18,9 +19,10 @@ idna==3.4
 iniconfig==2.0.0
 isort==5.12.0
 lazy-object-proxy==1.9.0
+limits==2.8.0
 mccabe==0.7.0
 mypy-extensions==1.0.0
-packaging==23.0
+packaging==22.0
 pathspec==0.11.1
 platformdirs==3.2.0
 pluggy==1.0.0
@@ -34,6 +36,7 @@ PyYAML==6.0
 requests==2.28.2
 rfc3986==1.5.0
 sewer==0.8.4
+slowapi==0.1.7
 sniffio==1.3.0
 starlette==0.26.1
 tomli==2.0.1
