@@ -1,7 +1,8 @@
 V2 :
 * Nonces cleanup
 * Improve code quality (pylint node > 9.5)
-* Take in orders expiration
+* Take in account orders expiration
+* Add API rate limiting
 
 V1 :
 * Created project
